2005-01-08  Adam Hooper   <adamh@densi.com>

	reviewed by: Johan Dahlin <johan@gnome.org>

	* gtk/gtk.override: Py_DECREF action in 
	gtk_action_group_add_*actions. This should disconnect all the
	groups from the callbacks when destroyed. Fixes bug 162874

2005-01-08  Johan Dahlin  <johan@gnome.org>

	* Makefile.am: Add pygtk_postinstall.py
	* docs/random/missing-symbols: Updated
	* gtk/__init__.py: Deprecate gtk.idle_add and friends.
	* gtk/gtk.defs:	Merge in 2.6 api, for GtkLabel functions, 
	thanks to Gian Mario Tagliaretti, fixes bug #163296
	* tests/test_thread.py: Don't use gtk.idle_add

2005-01-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/reversewrapper.py (GFlagsReturn, GFlagsParam): Add type
	handlers for GFlags in reverse wrappers.
	(GtkTreePathParam): Add type handler for GtkTreePath* param.

2005-01-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk.override: Declare PyGdkDevice_Type, now needed for some
	virtual method.

	* gtk/gtk.defs: Add a bunch of virtual method declarations for all
	non-deprecated gtk widgets.

	* gobject/pygobject.h: Add pyg_register_class_init to the API
	vtable and as macro, and PyGClassInitFunc typedef.

	* gobject/gobjectmodule.c (initgobject): Create
	pygobject_class_init_key, a GQuark that indentifiers the
	class_init data for a GType class.
	(pyg_register_class_init): Add, registers a class intialization
	function of type "int (*PyGClassInitFunc) (gpointer gclass,
	PyTypeObject *pyclass);"
	(pyg_run_class_init): Add, runs a stack of class initialization
	functions for a newly registered GObject class.
	(pyg_type_register): Call pyg_run_class_init right after the type
	is registered.
	Add pyg_register_class_init to pygobject_api_functions.

	* codegen/scanvirtuals.py: An utility script to scan for virtual
	methods in header files.  At the moment it is not very intelligent
	and doesn't distinguish between virtual methods and interface
	definitions.
