@@ -1,4 +1,10 @@
-2005-01-08  Adam Hooper   <adamh@densi.com>
+2005-01-08  Adam Hooper  <adamh@cvs.gnome.org>
+
+	* tests/test_actiongroup.py:
+
+	Add test script for bug #162874.
+
+2005-01-08  Adam Hooper   <adamh@cvs.gnome.org>
 
 	reviewed by: Johan Dahlin <johan@gnome.org>
 
